# TgBot

./: .gitignore  CMakeLists.txt  main.cpp
includes/: fs_operations.h
src/: fs_operations.cpp
